# trackrad2025

./: README.md
labeling-app/: .gitignore  README.md  app.py  common.py  hf_datasets.py  packages.txt  predict.py  pyproject.toml  requirements.txt  video.py
trackrad-model/: .gitignore  Dockerfile  README.md  evaluate.py  helpers.py  inference.py  main.py  minimal_mha_simpleitk.py  model.py  monai_metrics.py  postprocessing.py  pyproject.toml  save.sh  vos_inference.py
trackrad-model/nnUNet/nnunetv2/inference/: predict_from_raw_data.py
trackrad-model/nnUNet/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
trackrad-model/nnUNet/nnunetv2/training/nnUNetTrainer/variants/data_augmentation/: nnUnetTrainerDAMike.py  nnUnetTrainerDAMike2.py  nnUnetTrainerDAMikeContrast.py  nnUnetTrainerDAMikeContrast2.py  nnUnetTrainerDAMikeP4.py  nnUnetTrainerDAMikeP6.py
trackrad-model/nnUNet/nnunetv2/utilities/: crossval_split.py
trackrad-model/nnUNet/nnunetv2/utilities/label_handling/: label_handling.py
trackrad-model/notebooks/: README.md  convert-duke-liver.ipynb  eval_sam_only.ipynb  nnUNet-inference.ipynb  nnUNet-prep-nifti.ipynb  nnUNet-prep.ipynb
trackrad-model/sam2/sam2/: build_sam.py
trackrad-model/sam2/sam2/configs/sam2.1/: sam2.1_hiera_s512.yaml
trackrad-model/sam2/training/dataset/: transforms.py
trackrad-model/scripts/: README.md  _nnUNet-train-slurm-1.sh  _nnUNet-train-slurm-2.sh  nnUNet-find-best-config.sh  nnUNet-plan.sh  nnUNet-train-finish.sh  nnUNet-train-slurm-folds.sh  nnUNet-train-slurm.sh  setup_vm.sh
