[project]
name = "bouncing-target"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio-image-annotation>=0.3.0",
    "gradio[oauth]>=5.35.0",
    "huggingface-hub>=0.33.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "sam2>=1.1.0",
    "simpleitk>=2.5.2",
    "spaces>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]
